deploy/gateway/ingress-old.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: "${DOMAIN_SSL_CERT}"
    alb.ingress.kubernetes.io/healthcheck-path: /nginx_status
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: "access_logs.s3.enabled=true,access_logs.s3.bucket=styra-elb-access-logs-${CLOUD_REGION},access_logs.s3.prefix=${CLUSTER_NAME}/${NAMESPACE_NAME}/playground-gateway-nodeport-old"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06
    alb.ingress.kubernetes.io/tags: kubernetes.io/service-name=playground-gateway-nodeport-old,styra.com/k8s/cluster=${CLUSTER_NAME},styra.com/k8s/namespace=${NAMESPACE_NAME},styra.com/k8s/service=playground-gateway-nodeport-old
  name: playground-gateway-nodeport-old
spec:
  ingressClassName: aws-lb-class
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /
        pathType: Prefix
      - backend:
          service:
            name: playground-gateway-nodeport-old
            port:
              number: 80
        path: /
        pathType: Prefix
